// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`highlights a selected vehicle 1`] = `
<svg
  className="m-ladder"
  height={500}
  viewBox="-90 -40 180 500"
  width={180}
>
  <line
    className="m-ladder__line"
    x1={-40}
    x2={-40}
    y1="0"
    y2={420}
  />
  <line
    className="m-ladder__line"
    x1={40}
    x2={40}
    y1="0"
    y2={420}
  />
  <circle
    className="m-ladder__stop-circle"
    cx={-40}
    cy={0}
    r="3"
  />
  <circle
    className="m-ladder__stop-circle"
    cx={40}
    cy={0}
    r="3"
  />
  <text
    className="m-ladder__timepoint-name"
    dominantBaseline="middle"
    textAnchor="middle"
    x="0"
    y={0}
  >
    t2
  </text>
  <circle
    className="m-ladder__stop-circle"
    cx={-40}
    cy={210}
    r="3"
  />
  <circle
    className="m-ladder__stop-circle"
    cx={40}
    cy={210}
    r="3"
  />
  <text
    className="m-ladder__timepoint-name"
    dominantBaseline="middle"
    textAnchor="middle"
    x="0"
    y={210}
  >
    t1
  </text>
  <circle
    className="m-ladder__stop-circle"
    cx={-40}
    cy={420}
    r="3"
  />
  <circle
    className="m-ladder__stop-circle"
    cx={40}
    cy={420}
    r="3"
  />
  <text
    className="m-ladder__timepoint-name"
    dominantBaseline="middle"
    textAnchor="middle"
    x="0"
    y={420}
  >
    t0
  </text>
  <g
    className="m-ladder__vehicle"
    onClick={[Function]}
  >
    <polygon
      className="m-ladder__vehicle-triangle selected"
      points="60,305 45,325 75,325"
    />
    <text
      className="m-ladder__vehicle-label"
      dominantBaseline="middle"
      textAnchor="middle"
      x={60}
      y={333}
    >
      upward
    </text>
  </g>
  <g
    className="m-ladder__vehicle"
    onClick={[Function]}
  >
    <polygon
      className="m-ladder__vehicle-triangle "
      points="-60,-147.5 -45,-167.5 -75,-167.5"
    />
    <text
      className="m-ladder__vehicle-label"
      dominantBaseline="middle"
      textAnchor="middle"
      x={-60}
      y={-172.5}
    >
      downward
    </text>
  </g>
</svg>
`;

exports[`renders a ladder 1`] = `
<svg
  className="m-ladder"
  height={500}
  viewBox="-90 -40 180 500"
  width={180}
>
  <line
    className="m-ladder__line"
    x1={-40}
    x2={-40}
    y1="0"
    y2={420}
  />
  <line
    className="m-ladder__line"
    x1={40}
    x2={40}
    y1="0"
    y2={420}
  />
  <circle
    className="m-ladder__stop-circle"
    cx={-40}
    cy={0}
    r="3"
  />
  <circle
    className="m-ladder__stop-circle"
    cx={40}
    cy={0}
    r="3"
  />
  <text
    className="m-ladder__timepoint-name"
    dominantBaseline="middle"
    textAnchor="middle"
    x="0"
    y={0}
  >
    t2
  </text>
  <circle
    className="m-ladder__stop-circle"
    cx={-40}
    cy={210}
    r="3"
  />
  <circle
    className="m-ladder__stop-circle"
    cx={40}
    cy={210}
    r="3"
  />
  <text
    className="m-ladder__timepoint-name"
    dominantBaseline="middle"
    textAnchor="middle"
    x="0"
    y={210}
  >
    t1
  </text>
  <circle
    className="m-ladder__stop-circle"
    cx={-40}
    cy={420}
    r="3"
  />
  <circle
    className="m-ladder__stop-circle"
    cx={40}
    cy={420}
    r="3"
  />
  <text
    className="m-ladder__timepoint-name"
    dominantBaseline="middle"
    textAnchor="middle"
    x="0"
    y={420}
  >
    t0
  </text>
  <g
    className="m-ladder__vehicle"
    onClick={[Function]}
  >
    <polygon
      className="m-ladder__vehicle-triangle "
      points="60,305 45,325 75,325"
    />
    <text
      className="m-ladder__vehicle-label"
      dominantBaseline="middle"
      textAnchor="middle"
      x={60}
      y={333}
    >
      upward
    </text>
  </g>
  <g
    className="m-ladder__vehicle"
    onClick={[Function]}
  >
    <polygon
      className="m-ladder__vehicle-triangle "
      points="-60,-147.5 -45,-167.5 -75,-167.5"
    />
    <text
      className="m-ladder__vehicle-label"
      dominantBaseline="middle"
      textAnchor="middle"
      x={-60}
      y={-172.5}
    >
      downward
    </text>
  </g>
  <g
    className="m-ladder__vehicle"
    onClick={[Function]}
  >
    <polygon
      className="m-ladder__vehicle-triangle "
      points="-60,0 -45,-20 -75,-20"
    />
    <text
      className="m-ladder__vehicle-label"
      dominantBaseline="middle"
      textAnchor="middle"
      x={-60}
      y={-25}
    >
      notimepoint
    </text>
  </g>
</svg>
`;

exports[`renders a ladder with no timepoints 1`] = `
<svg
  className="m-ladder"
  height={500}
  viewBox="-90 -40 180 500"
  width={180}
>
  <line
    className="m-ladder__line"
    x1={-40}
    x2={-40}
    y1="0"
    y2={420}
  />
  <line
    className="m-ladder__line"
    x1={40}
    x2={40}
    y1="0"
    y2={420}
  />
  <g
    className="m-ladder__vehicle"
    onClick={[Function]}
  >
    <polygon
      className="m-ladder__vehicle-triangle "
      points="60,-20 45,0 75,0"
    />
    <text
      className="m-ladder__vehicle-label"
      dominantBaseline="middle"
      textAnchor="middle"
      x={60}
      y={8}
    >
      upward
    </text>
  </g>
</svg>
`;
